--- a/weekly_events.yaml
+++ b/weekly_events.yaml
@@ -1,10 +1,10 @@
-- day_of_week: Monday
-  time_of_day: 14:00
-- day_of_week: Tuesday
-  time_of_day: 14:00
-- day_of_week: Wednesday
-  time_of_day: 14:00
-- day_of_week: Thursday
-  time_of_day: 14:00
-- day_of_week: Friday
-  time_of_day: 14:00
+- day_of_week: "Monday"
+  time_of_day: "14:00"
+- day_of_week: "Tuesday"
+  time_of_day: "14:00"
+- day_of_week: "Wednesday"
+  time_of_day: "14:00"
+- day_of_week: "Thursday"
+  time_of_day: "14:00"
+- day_of_week: "Friday"
+  time_of_day: "14:00"
